Changed intro video

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <script>
       (function () {
         try {
-          var theme = localStorage.getItem("cs_theme") || "light";
+          var theme = localStorage.getItem("clg_theme") || "light";
           if (theme === "dark") document.documentElement.classList.add("dark");
         } catch (e) {}
       })();
